--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
   "extends": "airbnb",
   "rules": {
-    "no-alert": "off",
     "no-console": "off",
     "prefer-arrow-callback": "off",
-    "func-names": "off"
+    "func-names": "off",
+    "no-param-reassign": "off"
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   }
 }
